--- a/Challenge4.html
+++ b/Challenge4.html
@@ -2,36 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Challenge4</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <title>Challenge 4</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="Challenge4.js" type="text/javascript"></script>
-<!--    <script data-main="Challenge4.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>-->
+<!--    <script data-main="Challenge4.js" src="/3rdPartyLibraries/requirejs.js"></script>-->
+
+    <!--    <script data-main="Challenge4.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>-->
 </head>
 <body>
     <h2>Login Form</h2>
 
-    <form  id="login">
+    <form id="login" action="http://localhost:3008/challenge4" method="post">
         <label for="user">Username</label><br>
-        <input type="text" id="user"><br>
+        <input type="text" id="user" name="username"><br>
         <label for="pass">Password</label><br>
-        <input type="text" id="pass"><br><br>
+        <input type="text" id="pass" name="password"><br><br>
         <input type="submit" value="Submit">
     </form>
     <p></p>
 <script>
-    $("#login").submit(function(){
-        console.log("submit");
-        $.ajax({
-            url: '/login',
-            type: 'get',
-            data: {Username: Username, Password: Password},
-            async: false,
-            success: function(resp){
-                console.log("success");
-                $(".p").innerHTML("Welcome!")
-            }
-        })
-    });
+
 </script>
 </body>
 </html>
