--- a/Challenge4.html
+++ b/Challenge4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Challenge 4</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="Challenge4.js" type="text/javascript"></script>
+<!--    <script src="Challenge4.js" type="text/javascript"></script>-->
 <!--    <script data-main="Challenge4.js" src="/3rdPartyLibraries/requirejs.js"></script>-->
 
     <!--    <script data-main="Challenge4.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>-->
